diesel_compile_tests/tests/fail/derive_deprecated/deprecated_belongs_to.stderr
error: unexpected end of input, expected parentheses

  = help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`

  --> $DIR/deprecated_belongs_to.rs:29:3
   |
29 | #[belongs_to]
   |   ^^^^^^^^^^

error: expected parentheses
  --> $DIR/deprecated_belongs_to.rs:36:14
   |
36 | #[belongs_to = Bar]
   |              ^

error: unexpected end of input, expected identifier
  --> $DIR/deprecated_belongs_to.rs:43:13
   |
43 | #[belongs_to()]
   |             ^^

error: expected identifier
  --> $DIR/deprecated_belongs_to.rs:50:14
   |
50 | #[belongs_to("what")]
   |              ^^^^^^

error: unexpected end of input, expected `=`

  = help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`

  --> $DIR/deprecated_belongs_to.rs:57:14
   |
57 | #[belongs_to(parent)]
   |              ^^^^^^

error: expected `=`
  --> $DIR/deprecated_belongs_to.rs:64:20
   |
64 | #[belongs_to(parent())]
   |                    ^^

error: expected string literal
  --> $DIR/deprecated_belongs_to.rs:71:23
   |
71 | #[belongs_to(parent = 1)]
   |                       ^

error: expected identifier
  --> $DIR/deprecated_belongs_to.rs:78:23
   |
78 | #[belongs_to(parent = "1")]
   |                       ^^^

warning: #[belongs_to] attribute form is deprecated
  = help: use `#[diesel(belongs_to(Bar))]` instead

error: expected `foreign_key`
  --> $DIR/deprecated_belongs_to.rs:92:19
   |
92 | #[belongs_to(Bar, what)]
   |                   ^^^^

error: unexpected end of input, expected `=`

  = help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`

  --> $DIR/deprecated_belongs_to.rs:99:19
   |
99 | #[belongs_to(Bar, foreign_key)]
   |                   ^^^^^^^^^^^

error: expected string literal
   --> $DIR/deprecated_belongs_to.rs:106:33
    |
106 | #[belongs_to(Bar, foreign_key = 1)]
    |                                 ^

error: expected identifier
   --> $DIR/deprecated_belongs_to.rs:113:33
    |
113 | #[belongs_to(Bar, foreign_key = "1")]
    |                                 ^^^

warning: #[belongs_to] attribute form is deprecated
  = help: use `#[diesel(belongs_to(Baz, foreign_key = bar_id))]` instead

error: unexpected token: `Bar`
  --> $DIR/deprecated_belongs_to.rs:36:16
   |
36 | #[belongs_to = Bar]
   |                ^^^

error[E0423]: expected value, found struct `Bar`
  --> $DIR/deprecated_belongs_to.rs:36:16
   |
18 | / struct Bar {
19 | |     id: i32,
20 | | }
   | |_- `Bar` defined here
...
36 |   #[belongs_to = Bar]
   |                  ^^^ help: use struct literal syntax instead: `Bar { id: val }`

error[E0658]: arbitrary expressions in key-value attributes are unstable
  --> $DIR/deprecated_belongs_to.rs:36:16
   |
36 | #[belongs_to = Bar]
   |                ^^^
   |
   = note: see issue #78835 <https://github.com/rust-lang/rust/issues/78835> for more information
